fix: paddings and margins must be divisible by 4

--- a/src/pages/home/page/_components/todo-list/add/index.module.scss
+++ b/src/pages/home/page/_components/todo-list/add/index.module.scss
@@ -1,5 +1,5 @@
 .Todo-list-add {
-  margin-top: 50px;
+  margin-top: 40px;
 
   &__name,
   &__description {
