--- a/src/pages/home/page/_components/todo-list/index.module.scss
+++ b/src/pages/home/page/_components/todo-list/index.module.scss
@@ -1,14 +1,4 @@
 .Todo-list {
   background-color: #fff;
-  padding: 50px;
-
-  &__add {
-    margin-top: 50px;
-  }
-
-  &__add-name,
-  &__add-description {
-    margin-bottom: 20px;
-  }
-
+  padding: 40px;
 }
