--- a/src/pages/home/page/_components/todo-list/item/index.module.scss
+++ b/src/pages/home/page/_components/todo-list/item/index.module.scss
@@ -3,13 +3,13 @@
 
   &__name {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
   }
 
   &__check,
   &__edit,
   &__save {
-    margin-right: 10px;
+    margin-right: 12px;
   }
 
 }
